Fix quiz summary button alignment

--- a/client/styles/takeQuiz.less
+++ b/client/styles/takeQuiz.less
@@ -131,10 +131,8 @@
         margin: 1.5em 0;
     }
 
-    .summary-actions button:not(:last-of-type) {
-        margin-right: .25em;
-        margin-bottom: .25em;
-    }
+    .summary-actions button { margin-bottom: .25em; }
+    .summary-actions button:not(:last-of-type) { margin-right: .25em; }
 
     .score {
         font-weight: bold;
